@@ -3,7 +3,7 @@ Priority: extra
 Section: debian-installer
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Jérémy Bobbio <lunar@debian.org>
-Build-Depends: debhelper (>= 4.2), libdebconfclient0-dev (>= 0.130), libgtk-directfb-2.0-dev, libvte-dev (>> 0.16.14-1)
+Build-Depends: debhelper (>= 4.2), libdebconfclient0-dev (>= 0.139), libnewt-dev, libgtk-directfb-2.0-dev, libvte-dev (>> 0.16.14-1)
 Standards-Version: 3.8.0
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/cdebconf-terminal
 
@@ -17,3 +17,12 @@ Description: cdebconf gtk plugin displaying a terminal
  cdebconf plugin to display a terminal inside the debian-installer graphical
  frontend.
 
+Package: cdebconf-newt-terminal
+Architecture: any
+Section: debian-installer
+Depends: cdebconf-newt-udeb, ${shlibs:Depends}
+Provides: cdebconf-terminal
+XC-Package-Type: udeb
+Description: cdebconf newt plugin to provide a clean terminal
+ cdebconf plugin to run a program in a clean terminal environment, shutting
+ down newt to do so.
