@@ -1,6 +1,11 @@
 cdebconf-terminal (0.3) UNRELEASED; urgency=low
 
   * cdebconf-gtk-terminal Provides: cdebconf-terminal, not cdebconf-entropy.
+  * Add a new cdebconf-newt-terminal that deals with all the things you need
+    to do if you want to display something completely different on top of
+    the usual debconf frontend. This should cover rescue mode (cf. bug
+    #412168) as well as permitting manual package selection in tasksel using
+    aptitude. Requires libdebconfclient0-dev (>= 0.139).
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 19 Jan 2009 23:34:56 +0000
 
